added solr